--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # Storage
+  shared_preferences: ^2.2.2
+  
+  # UI
+  url_launcher: ^6.2.4
+  
+  # Utilities
+  uuid: ^4.3.3
+  http: ^1.2.0
+  
+  # Notifications
+  flutter_local_notifications: ^16.3.2
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
