--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -46,7 +45,7 @@ dependencies:
   http: ^1.2.0
   
   # Notifications
-  flutter_local_notifications: ^16.3.2
+  flutter_local_notifications: ^15.1.0+1
   timezone: ^0.9.2
 
 dev_dependencies:
