feat: Add simplified APK generator script and notification service
- Implemented a PowerShell script (build_apk.ps1) to automate the APK generation process, including creating a destination directory, building the APK in release mode, and handling the copying of the generated APK to the specified directory.
- Introduced a simplified notification service (notification_service_simple.dart) for managing notifications without external dependencies, featuring methods for initialization, scheduling, and canceling notifications.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,14 +39,13 @@ dependencies:
   
   # UI
   url_launcher: ^6.2.4
-  
-  # Utilities
+    # Utilities
   uuid: ^4.3.3
   http: ^1.2.0
   
-  # Notifications
-  flutter_local_notifications: ^15.1.0+1
-  timezone: ^0.9.2
+  # Notifications (desactivadas por problemas de compatibilidad)
+  # flutter_local_notifications: ^15.1.0+1
+  # timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
